<resources>
    <string name="app_name">Open Market Price Tracker</string>
    <string name="add_price">Add Price</string>
    <string name="commodity">Commodity</string>
    <string name="unit_e_g_per_kg">Unit (e.g., per Kg)</string>
    <string name="date">Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="enter_price">Enter Price</string>
    <string name="price_input">Price Input</string>
    <string name="save">Save</string>
    <string name="save_price">Save Price</string>
    <string name="Price_input" />
    <string name="price">Price (ZMW)</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="add_commodity_price_screen">Add Commodity Price Screen</string>
    <string name="unit">"Unit: "</string>
    <string name="invalid_date_error">Invalid date entered...please enter date in correct format</string>
    <string name="edit_price_error">Price cannot be empty</string>
    <string name="select_date">Select Date</string>
    <string name="price_trends">Price Trends</string>
    <string name="commodity_name">Maize</string>
    <string name="min">Minimum Price</string>
    <string name="max">Maximum Price</string>
    <string name="average">Average Price</string>
    <string name="k0_00">K150.00</string>
    <string name="Select_commodity">Select commodity</string>
    <string name="todo">TODO</string>
    <string name="price_summary">PRICE SUMMARY</string>
    <string name="k280_00">K280.00</string>
    <string name="k215_00">K215.00</string>
    <string name="last_updated">Last Updated</string>
    <string name="today_11_31_am">Today, 11:31 AM</string>
    <string name="select_commodity">Select Commodity</string>
    <string name="choose_commodity">Choose commodity</string>
    <string name="commodity_icon">Commodity icon</string>
    <string name="select_a_commodity">Select a commodity</string>
    <string name="price_summary1">PRICE SUMMARY</string>
    <string name="min_price">Min price</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="max_price">Max price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="average_price">Average price</string>
    <string name="price_trend_over_time">Price Trend Over Time</string>
    <string name="chart_icon">Chart icon</string>
    <string name="no_data">No data</string>
    <string name="no_data_available">No data available</string>
    <string name="select_a_commodity_to_view_price_trends">Select a commodity to view price trends</string>
    <string name="please_select_a_commodity">Please select a commodity\n</string>
</resources>