<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_add_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_commodity_price_screen"
            android:paddingBottom="24dp"
            android:text="Add Commodity"
            android:textColor="#212121"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_commodity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinner_commodity"
            android:text="@string/select_commodity"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_commodity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:contentDescription="@string/Price_input"
            android:hint="Enter Commodity Name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            tools:ignore="ContentDescription,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="Units"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_commodity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/choose_commodity"
            android:background="@android:drawable/editbox_background"
            android:padding="8dp"
            android:minHeight="48dp" />
        <TextView
            android:id="@+id/text_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/unit_e_g_per_kg"
            android:paddingTop="8dp"
            android:text="(e.g., per Kg)"
            android:textColor="#616161"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/label_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_price"
            android:paddingTop="16dp"
            android:text="@string/price"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_price_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:contentDescription="@string/Price_input"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            tools:ignore="ContentDescription,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_date_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/select_date"
            android:inputType="none"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:drawableEndCompat="@android:drawable/ic_menu_today"
            tools:ignore="ContentDescription,RedundantDescriptionCheck,VisualLintTextFieldSize" />



        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="#4DB6AC"
            android:contentDescription="@string/save_price"
            android:padding="14dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    </LinearLayout>
</ScrollView>